--- a/index.html
+++ b/index.html
@@ -540,16 +540,18 @@ Emma Rand
 <p><a href="https://www.york.ac.uk/biology/people/daniel-ungar/">Dani Ungar</a></p>
 <p><strong>Modelling the organisation of glycan building enzymes</strong></p>
 <div style="font-size: 70%;">
-<p>Glycans are the third main type of biological polymer besides proteins and DNA/RNA and is made up of sugar building blocks. In contrast to the other two classes though, glycans are synthesized without a template. We use a computational model to understand the glycan generating enzyme organisation</p>
+<p>Glycans are the third main type of biological polymer besides proteins and DNA/RNA and is made up of sugar building blocks. In contrast to the other two classes though, glycans are synthesized without a template. We use a computational model to understand the glycan generating enzyme organisation from measured glycan distributions.</p>
 </div>
-<p>from measured glycan distributions.</p>
 
-<img data-src="images/daniel-ungar.jpg" class="r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="images/daniel-ungar.jpg" class="r-stretch"></section></section>
+<section id="what-questions-do-you-have" class="title-slide slide level1 center">
+<h1>What questions do you have?</h1>
+<div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
 </div>
-</section></section>
+</section>
     </div>
   </div>
 
